property file added, updated to the last version